fix: clipping for long toolbar menus (#178, #188) (#300)
* fix: clipping for long toolbar menus (#178, #188)

* chore: changelog

* fix: clipping for long toolbar menus (#178, #188)

* fix: clipping for long toolbar menus (#178, #188)

* fix: clipping for long toolbar menus (#178, #188)

* fix: clipping for long toolbar menus (#178, #188)

* fix: clipping for long toolbar menus (#178, #188)

* fix: clipping for long toolbar menus (#178, #188)

--- a/src/javascript/RichTextCKEditor5/RichTextCKEditor5.scss
+++ b/src/javascript/RichTextCKEditor5/RichTextCKEditor5.scss
@@ -12,8 +12,9 @@
 }
 
 .wrapper {
-  overflow-y: scroll;
+  overflow-y: auto;
   min-height: 20vh;
+  height: fit-content;
 }
 
 
